# uk-news-sentiment-pipeline

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
app/: app.py  dashboard_io.py
config/: explore_8tick_1y_vader_guardian.yaml  model_core3_1y_vader_finbert_guardian.yaml  model_core3_1y_vader_guardian.yaml  pilot.yaml  pilot_5tick_1m.yaml  pilot_5tick_3m.yaml  pilot_5tick_bakeoff_dge.yaml  pilot_5tick_bakeoff_expn.yaml  pilot_alias_v2.yaml
docs/: architecture.md  data-and-privacy.md  methodology.md  provider-decision-record.md  results.md
reports/: bakeoff_summary.csv  coverage_delta.csv  coverage_report.csv  coverage_report.md  coverage_summary.csv  data_dictionary.csv  pilot_metrics_policy_A_core3_finbert.csv  pilot_metrics_table.csv  pilot_splits_policy_A_core3_finbert.json  pilot_splits_policy_B_core3_finbert.json
src/align/: build_model_dataset.py
src/common/: config.py  hashing.py  paths.py
src/eval/: pilot_metrics.py
src/features/: build_features_daily.py
src/ingest/: news_guardian.py  news_newsapi.py  prices_yfinance.py
src/inspection/: build_inspection_items.py
src/reports/: bakeoff_summary.py  coverage_report.py  data_dictionary.py
tests/: test_alignment_no_lookahead.py  test_guardian_cutoff.py
